# santi-cli

./: AGENTS.md  SECURITY.md
.github/workflows/: ci.yml  guard.yml  release-beta.yml  release.yml  verify.yml
app/: Cargo.toml
app/src/: cli.rs  config.rs  main.rs  output.rs  provider_profile.rs
app/src/backend/: http.rs  local.rs
app/src/backend/http/: mod.rs  render.rs  send.rs  tests.rs  types.rs  watch.rs
app/tests/: cli_contract.rs
docs/: core.md  dev.md  release.md
scripts/: package.sh  release.py  release_beta.py  verify.py  verify.sh
scripts/release/: accept.sh  checksum.sh  collate.sh
